@@ -59,10 +59,12 @@ New Features
   - Added json-schema for Entity REST API: for all entities get
     /rest/entity.json, for a single entity get /rest/entity.json/${name}.json
   - Added RAML API definition for Entity REST API at /rest/entity.raml
+  - Added Swagger API definition for Entity REST API at /rest/entity.swagger
   - Entity REST API supports master definitions through
     /rest/m1/${entity}/${master} or /rest/v1/${entity}?master=${master};
     see comments in the rest.xml screen definition XML file for examples
   - Added RAML API definition for Entity Master REST API at /rest/master.raml
+  - Added Swagger definition for Entity Master REST at /rest/master.swagger
   - SystemMessage entity has additional fields to identify messages
   - Changed receive#SystemMessage to an interface, now use
     receive#IncomingSystemMessage for remote calls, will call the
